--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ h1{
     -webkit-backdrop-filter: blur( 13.5px );
     border-radius: 10px;
     border: 1px solid rgba( 255, 255, 255, 0.18 );
-
+    
     
 }
     
@@ -63,29 +63,63 @@ h1{
 
 
 .todo p{
-    margin: 40px;
+    margin: 0 auto;
+    margin-bottom: 40px;
     display: flex;
-    flex-direction:row-reverse;
+    justify-content: center;
+    flex-direction:row;
     color: rgb(8, 7, 7);
     font-size: 22px;
     font-family: sans-serif;
+    max-width:700px;
+
+    
 }
 .todo input{
     width: 40px;
     height: 30px;
     margin-bottom: 9px;
+    position: absolute;
+    right: 0;
+   
 }
 
 .todo button {
     height:30px;
     text-align: center;
+    position: absolute;
+    left:0;
     
 }
-#check{
-    height: 30px;
-    width: 30px;
-  
+@media(max-width:579px){
+    .todo p{
+        margin: 40px;
+        display: flex;
+        flex-direction:row-reverse;
+        align-items: center;
+        color: rgb(8, 7, 7);
+        font-size: 12px;
+        font-family: sans-serif;
+    }
+    .container input{
+        width: 150px;
+    }
+    .container button{
+        width: 85px;
+        font-size: 10px;
+    }
+    .todo input{
+        width: 25px;
+       
+        margin-bottom: 9px;
+    }
+  .todo button{
+    width: 50px;
+    height: 25px;
+    
+    }
 }
+
 @media(max-width:420px){
     .todo p{
         margin: 40px;
@@ -111,7 +145,6 @@ h1{
   .todo button{
     width: 50px;
     height: 25px;
-    position: relative;
-    top: -4px;
+    
     }
 }
